# MorphoMapping

./: DensMAP_1.ipynb  DensMAP_1_Clustering.ipynb  README.md  pyproject.toml
.github/workflows/: publish.yml
DensMAP/: DensMAP_1.ipynb  DensMAP_2.ipynb  DensMAP_3.ipynb  DensMAP_4.ipynb
DensMAP_1D/: DensMAP_1d_1.ipynb  DensMAP_1d_2.ipynb
DensMAP_Flow_Cytometry/: DensMAP_1.ipynb  FC_CSV.ipynb
DensMAP_Intensity/: DensMAP_Int_1.ipynb
MorphoMapping/: 2_FCS_to_CSV.ipynb  4_DMAP.ipynb  5_DMAP_Clustering.ipynb  7_DMAP_Data_Mining.ipynb  8_Cluster_Analysis.R  main.py  morphomapping.py
R/: create_heatmap.R
UMAP/: UMAP_1.ipynb  UMAP_2.ipynb
_resources/: 3_CSV_Organizer.ipynb  6_DMAP_Figures.ipynb  8_Cluster_Analysis.R
_resources/CSV/: IFC_CSV.ipynb
_resources/UMAP/: UMAP_2.ipynb  (+1 more)
example/: MorphoMapping.ipynb
gui/: .gitignore  COMMIT_MESSAGE.txt  DOCUMENTATION_INDEX.md  FRAMEWORK_EVALUATION.md  FRAMEWORK_MIGRATION.md  GITHUB_ISSUES.md  GITHUB_ISSUE_TEMPLATES.md  INSTALLATION.md  PREPARE_PUSH.sh  PUSH_INSTRUCTIONS.md  PYSIDE6_DEPLOYMENT.md  README.md  README_PYSIDE6.md  RESTART_GUIDE.md  TRANSLATE_REMAINING.sh  USER_GUIDE.md  app.py  app_nicegui_prototype.py  app_pyside6.py  background_processing.py  create_github_issues.sh  morphomapping_gui.py  session_state_manager.py  test_performance.py  test_stability.py
launcher/: Install_MorphoMapping.bat  Install_MorphoMapping.sh  README.md  Start_MorphoMapping.bat  Start_MorphoMapping.sh
morphomapping.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tSNE/: tSNE_1.ipynb  tSNE_2.ipynb
tests/: test_morphomapping.py
(+35 files in other folders)
